# world-cup-analyzer

./: .env.example  .gitignore  LICENSE  README.md  config.py  export.py  ledger.py  main.py  model.py  pyproject.toml
ai/: analyzer.py
api/: football.py  models.py
tests/: test_football_api.py  test_formatters.py  test_ledger.py  test_model.py
